syntax = "proto3";

package main;

import "proto/processor_message.proto";
import "proto/memory_message.proto";
import "proto/storage_message.proto";
import  "proto/screen_message.proto";
import "proto/keyboard_message.proto";
import "google/protobuf/timestamp.proto";

option go_package = "PcBook/proto";
option java_multiple_files = true;

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storage = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_lbs = 11;
  }
  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}