syntax = "proto3";

package main;

import "proto/memory_message.proto";

option go_package = "PcBook/proto";
option java_multiple_files = true;

message CPU {
  string pcbrand = 1;
  string pcname = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}